# agentic-design-patterns

./: .gitignore
chapter-4/: README.md  pyproject.toml
chapter_1/: README.md  prompt-chaining.py  pyproject.toml
chapter_2/: README.md  pyproject.toml  routing-adk.py  routing-langchain.py
chapter_3/: README.md  parallelization.py  pyproject.toml
chapter_5/: README.md  pyproject.toml  tool_use_crewai.py  tool_use_langchain.py
