[project]
name = "chapter-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "nest-asyncio>=1.6.0",
    "ruff>=0.13.1",
    "crewai>=0.193.2",
]
